--- a/views/email/hot_limit_alert.html
+++ b/views/email/hot_limit_alert.html
@@ -1,7 +1,7 @@
 <html>
     <body>
          <h3>{{.Symbol}}</h3>
-         Hot
+         Hot: {{.WalletBalance.TotalHotIdr}} IDR
          <ul>
             {{range $hot := .WalletBalance.HotBalances}} 
             <li>{{$hot.Name}}: {{$hot.Coin}} ({{$hot.Idr}})</li>
