email report percent

--- a/views/email/report.html
+++ b/views/email/report.html
@@ -24,8 +24,8 @@
                <td>{{$balance.TotalHotCoin}} {{$balance.CurrencyConfig.Unit}}</td>
                <td>{{$balance.TotalColdCoin}} {{$balance.CurrencyConfig.Unit}}</td>
                <td>{{$balance.PendingWDCoin}} {{$balance.CurrencyConfig.Unit}}</td>
-               <td>{{$balance.HotPercent}} {{$balance.CurrencyConfig.Unit}}</td>
-               <td>{{$balance.HotColdPercent}} {{$balance.CurrencyConfig.Unit}}</td>
+               <td>{{$balance.HotPercent}}%</td>
+               <td>{{$balance.HotColdPercent}}%</td>
                <td>{{$balance.TotalUserCoin}} {{$balance.CurrencyConfig.Unit}}</td>
             </tr>
             {{end}}
