--- a/views/email/user_balance_alert.html
+++ b/views/email/user_balance_alert.html
@@ -14,6 +14,7 @@
         </ul>
         Hot+Cold Coin: <b>{{.TotalCoin}}</b> {{.WalletBalance.CurrencyConfig.Unit}} <br>
         User Coin: <b>{{.WalletBalance.TotalUserCoin}}</b> {{.WalletBalance.CurrencyConfig.Unit}} <br>
+        Hot+Cold Coin: <b>{{.TotalIdr}}</b> IDR <br>
         User IDR: {{.WalletBalance.TotalUserIdr}} IDR
     </body>
 </html>
